Bug 325396 - Can't view all ingredients in database
Summary: Can't view all ingredients in database
Status: RESOLVED FIXED
Alias: None
Product: krecipes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.0-beta2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-28 17:31 UTC by Colleen
Modified: 2015-06-19 11:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Colleen 2013-09-28 17:31:42 UTC
When you select Data and then, Ingredients, only ingredients from the recipe you are entering that appear to be new in Krecipes appears.  This functionality is lousy .... you cannot edit ingredients or manage duplications.  I want to be able to see all ingredients in the database so I can manage any duplicates.
Comment 1 José Manuel Santamaría Lema 2015-06-19 11:15:25 UTC
Git commit 740732a5f4615936a0cdfd76761a4cbad935c37b by José Manuel Santamaría Lema.
Committed on 19/06/2015 at 09:45.
Pushed by joselema into branch 'master'.

New ingredient list widget without Qt3 support classes.
As a side effect the bug above is fixed now.

M  +4    -2    src/CMakeLists.txt
A  +122  -0    src/actionshandlers/kreingredientactionshandler.cpp     [License: GPL (v2+)]
A  +40   -0    src/actionshandlers/kreingredientactionshandler.h     [License: GPL (v2+)]
M  +4    -1    src/backends/qsqlrecipedb.cpp
M  +1    -1    src/backends/qsqlrecipedb.h
M  +1    -1    src/backends/recipedb.h
M  +21   -21   src/dialogs/ingredientsdialog.cpp
M  +8    -5    src/dialogs/ingredientsdialog.h
A  +99   -0    src/widgets/kreingredientlistwidget.cpp     [License: GPL (v2+)]
A  +41   -0    src/widgets/kreingredientlistwidget.h     [License: GPL (v2+)]

http://commits.kde.org/krecipes/740732a5f4615936a0cdfd76761a4cbad935c37b