New ingredient list widget without Qt3 support classes.

BUG: 325396
As a side effect the bug above is fixed now.