src/backends/recipedb.h
@@ -212,7 +212,7 @@ public:
 	void loadCachedCategories( CategoryTree **list, int limit, int offset, int parent_id, bool recurse );
 	virtual void loadCategories( ElementList *list, int limit = -1, int offset = 0 ) = 0;
 	virtual void loadIngredientGroups( ElementList *list ) = 0;
-	virtual void loadIngredients( ElementList *list, int limit = -1, int offset = 0 ) = 0;
+	virtual int loadIngredients( ElementList *list, int limit = -1, int offset = 0 ) = 0;
 	virtual void loadPossibleUnits( int ingredientID, UnitList *list ) = 0;
 	virtual int loadPrepMethods( ElementList *list, int limit = -1, int offset = 0 ) = 0;
 	// Loads the list of possible properties by default, all the ingredient properties
