src/dialogs/ingredientsdialog.h
@@ -2,6 +2,7 @@
 *   Copyright © 2003 Unai Garro <ugarro@gmail.com>                        *
 *   Copyright © 2003 Cyril Bosselut <bosselut@b1project.com>              *
 *   Copyright © 2003 Jason Kivlighn <jkivlighn@gmail.com>                 *
+*   Copyright © 2015 José Manuel Santamaría Lema <panfaust@gmail.com>     *
 *                                                                         *
 *   This program is free software; you can redistribute it and/or modify  *
 *   it under the terms of the GNU General Public License as published by  *
@@ -17,12 +18,14 @@
 
 #include "widgets/krelistview.h"
 #include "widgets/dblistviewbase.h"
+#include "widgets/kregenericlistwidget.h"
 
 class RecipeDB;
 class IngredientGroupsDialog;
 class KPushButton;
-class ActionsHandlerBase;
-class IngredientActionsHandler;
+class KreGenericActionsHandler;
+class KreIngredientActionsHandler;
+class KreIngredientListWidget;
 class KTabWidget;
 class KAction;
 class QHBoxLayout;
@@ -36,7 +39,7 @@ public:
 	IngredientsDialog( QWidget* parent, RecipeDB *db );
 	~IngredientsDialog();
 	void reload( ReloadFlags flag = Load );
-	ActionsHandlerBase *getActionsHandler() const;
+	KreGenericActionsHandler *getActionsHandler() const;
 	void addAction( KAction * action );
 
 private slots:
@@ -48,9 +51,9 @@ private:
 	QVBoxLayout* listLayout;
 	KPushButton* addIngredientButton;
 	KPushButton* removeIngredientButton;
-	KreListView* ingredientListView;
+	KreIngredientListWidget * ingredientListWidget;
 	IngredientGroupsDialog *groupsDialog;
-	IngredientActionsHandler *ingredientActionsHandler;
+	KreIngredientActionsHandler *ingredientActionsHandler;
 	KTabWidget* tabWidget;
 	QWidget* ingredientTab;
 
